# IndustrialRos

./: CMakeLists.txt  README.md  package.xml
scripts/: lisscode.cpp  move_linear.py
src/: ee_pose.csv  extract_tf_trajectory.py  frames.gv  ideal.csv  lissajous_data.bag  lissajous_node.cpp  plot_lissajous_comparison.py  trajectory.csv  trayectoria_ideal.csv
